<resources>
    <string name="app_name">万律法律咨询</string>
    <string name="more">更多</string>
    <string name="rmb">元</string>
    <string name="rmb_unit">¥</string>
    <string name="commit">确认</string>
    <string name="about_version">关于万律</string>
    <string name="money_format">%1$s元</string>


    <string name="account_check_code">发送验证码</string>
    <string name="account_check_code_again">重新获取 %1$s s</string>
    <string name="account_login">立即登录</string>
    <string name="account_agreement_1">登录即表示同意以上条款</string>
    <string name="account_agreement_2">《注册服务条款》</string>
    <string name="account_agreement_3">《隐私声明》</string>

    <string name="home_rd_advisory">咨询</string>
    <string name="home_rd_case">案例</string>
    <string name="home_rd_video">短剧</string>
    <string name="home_rd_charitable">公益</string>
    <string name="home_rd_user">我的</string>
    <string name="home_rd_bidding">竞标</string>

    <string name="advisory_family">婚姻家庭</string>
    <string name="advisory_criminal">刑事案件</string>
    <string name="advisory_work_injury">劳动工伤</string>
    <string name="advisory_debt">债权债务</string>
    <string name="advisory_medical">医疗赔偿</string>
    <string name="advisory_contract">合同纠纷</string>
    <string name="advisory_traffic_accident">交通事故</string>
    <string name="advisory_more">更多</string>
    <string name="advisory_estate">房产纠纷</string>
    <string name="advisory_consultation">在线咨询</string>
    <string name="advisory_hint_1">疑难问题在线咨询</string>
    <string name="advisory_phone_consultation">电话咨询</string>
    <string name="advisory_hint_2">复杂案件电话咨询</string>
    <string name="advisory_case">经典案例</string>
    <string name="advisory_knowledge">法律知识</string>
    <string name="advisory_hint_3">万律=专业、高效、透明</string>
    <string name="advisory_hint_4">认证齐全</string>
    <string name="advisory_hint_5">经验丰富</string>
    <string name="advisory_hint_6">进度查询</string>
    <string name="advisory_hint_7">隐私保护</string>

    <string name="case_title">案例</string>
    <string name="case_classical">经典案例</string>
    <string name="case_tendering_text">指派律师中…</string>
    <string name="case_done_text">已结束</string>
    <string name="case_done_money">待支付%1$s元</string>
    <string name="case_payed">已支付</string>

    <string name="video_short">法律短剧</string>
    <string name="video_knowledge">法律知识</string>
    <string name="video_hot">热门推荐</string>
    <string name="video_play_count">%1$d人已看</string>
    <string name="user_balance">账户余额：</string>
    <string name="user_recharge">充值</string>
    <string name="user_withdraw">提现</string>
    <string name="user_service_hint">全国法律咨询热线</string>
    <string name="user_service_online">在线咨询</string>
    <string name="user_service_phone">电话咨询</string>
    <string name="user_service_entrust">案件委托</string>
    <string name="user_knowledge">法律知识</string>
    <string name="user_welfare">1元公益计划</string>
    <string name="user_lawyer">律师入驻</string>
    <string name="user_lawyer_state_done">已投</string>
    <string name="bidding_bid">投标</string>
    <string name="bidding_count">人竞标</string>
    <string name="bidding_num">#编号%1$d#</string>
    <string name="bidding_view_count">%1$d人</string>
    <string name="case_pay">支付</string>
    <string name="processing">处理中</string>
    <string name="unpaid">待支付：</string>
    <string name="to_pay">去支付</string>
    <string name="welfare_already">已筹款</string>
    <string name="welfare_target">目标金额</string>
    <string name="welfare_to_donate">去捐赠</string>
    <string name="welfare_hint_1">奉献点滴爱心，传播社会正能量</string>
    <string name="welfare_have">目前已获得爱心款</string>
    <string name="welfare_count_people">累计帮助人</string>
    <string name="welfare_count">累计帮助次数</string>
    <string name="welfare_title_hint_1">1元公益资助计划</string>
    <string name="welfare_title_hint_2">我们将用户缴纳的1元会员费资助到贫困山区孩子</string>
    <string name="donation">捐款</string>
    <string name="donation_money">捐款金额</string>
    <string name="to_donation">去捐赠</string>
    <string name="pay_member">1元开通会员服务</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_card">银行卡支付</string>
    <string name="pay_union">银联支付</string>
    <string name="pay_balance">余额支付</string>
    <string name="pay_commit">确认支付</string>
    <string name="pay_welfare">了解公益</string>
    <string name="pay_success">支付成功！</string>
    <string name="pay_order_num">订单编号：</string>
    <string name="pay_order_catalog">支付类目：</string>
    <string name="pay_order_catalog_2">充值/捐款/案件费用支付</string>
    <string name="pay_order_money">支付金额：</string>
    <string name="pay_i_know">我知道了</string>
    <string name="withdraw_money">提现金额</string>
    <string name="withdraw_money_1">提现金额：</string>
    <string name="withdraw_all">全部提现</string>
    <string name="withdraw_card_name">所属户名</string>
    <string name="input">请输入</string>
    <string name="withdraw_card_bank">所属支行</string>
    <string name="withdraw_card_area">省/市/区</string>
    <string name="withdraw_card_bank_name">支行名称</string>
    <string name="withdraw_card_num">银行卡号</string>
    <string name="withdraw_card_now">立即提现</string>
    <string name="withdraw_success">提现成功！</string>
    <string name="withdraw_hint">预计1-3个工作内到账，节假日顺延，请耐心等待！</string>
    <string name="withdraw_i_know">我知道了</string>
    <string name="welfare_raise">已筹款(元)</string>
    <string name="welfare_target_2">目标金额(元)</string>
    <string name="welfare_donate_count">捐款次数(次)</string>
    <string name="top_up_money">充值金额</string>
    <string name="top_up_now">立即充值</string>
    <string name="top_up_way">充值方式</string>
    <string name="account_input_mobile">请输入手机号</string>
    <string name="account_input_password">请设置登录密码</string>
    <string name="account_input_check_code">请输入验证码</string>
    <string name="account_input_password_2">请输入登录密码</string>
    <string name="account_regi">注册账号</string>
    <string name="account_forget">忘记密码</string>
    <string name="account_nick_name">昵称</string>
    <string name="account_password">密码</string>
    <string name="account_password_new">新密码</string>
    <string name="account_password_new_hint">请输入新密码</string>
    <string name="account_password_again">确认密码</string>
    <string name="account_password_again_hint">请再次输入新密码</string>
    <string name="set_logout">退出当前帐号</string>
    <string name="set_change_password">修改密码</string>
    <string name="set_change_old_password">请输入旧密码</string>
    <string name="set_mobile">我的手机号码</string>
    <string name="set_change_name">昵称修改</string>
    <string name="dg_member_hint_title">尊贵会员特权</string>
    <string name="dg_member_hint_des">24小时免费咨询法律问题\n提供专业的法律解决方案\n实时查看案件的最新进展</string>
    <string name="dg_member_hint_commit">1元立即体验</string>
    <string name="account_real_name">真实姓名</string>
    <string name="et_input">请输入</string>
    <string name="account_id_num">身份证号</string>
    <string name="esc">取消</string>
    <string name="downing">下载中</string>
    <string name="lawyer_user_bidding">等待指派</string>
    <string name="lawyer_user_end">已结束</string>
    <string name="lawyer_user_unpaid">待支付%1$s元</string>
</resources>
