<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.lawyer.controller.account.vm.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5"
        android:orientation="vertical">

        <include layout="@layout/layout_title_bar" />

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_106"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/account_password"
                android:textColor="#ff45494b"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@={vm.oldPass}"
                android:imeOptions="actionDone"
                android:hint="@string/set_change_old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#ff45494b"
                android:textCursorDrawable="@drawable/bg_et_cursor"
                android:textSize="@dimen/sp_15"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_106"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/account_password_new"
                android:textColor="#ff45494b"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/account_password_new_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@={vm.newPass}"
                android:maxLines="1"
                android:textColor="#999999"
                android:textCursorDrawable="@drawable/bg_et_cursor"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_106"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/account_password_again"
                android:textColor="#ff45494b"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:text="@={vm.againPass}"
                android:gravity="center_vertical"
                android:hint="@string/account_password_again_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#999999"
                android:textCursorDrawable="@drawable/bg_et_cursor"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginStart="@dimen/dp_27"
            android:onClick="@{vm.commitClick}"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_27"
            android:background="@drawable/bg_btn_green_radius_22"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>
</layout>