<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_298"
    android:layout_height="@dimen/dp_450"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_390"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_bg_member_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_120"
        android:text="@string/dg_member_hint_title"
        android:textColor="#ffffffff"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:layout_width="@dimen/dp_166"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_160"
        android:text="@string/dg_member_hint_des"
        android:textColor="#ffffffff"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_44"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_green_16aa47_radius_22"
        android:layout_marginTop="@dimen/dp_260"
        android:text="@string/dg_member_hint_commit"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tv_commit"
        android:textSize="@dimen/sp_16" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_close_circle_white" />
</RelativeLayout>