<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:text="@string/account_nick_name"
            android:textColor="#ff45494b"
            android:textSize="@dimen/sp_15" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/edit"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@null"
            android:paddingStart="@dimen/dp_54"
            android:gravity="center_vertical"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#ff45494b"
            android:textCursorDrawable="@drawable/bg_et_cursor"
            android:textSize="@dimen/sp_15"
            tools:text="@string/app_name" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_27"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_27"
        android:background="@drawable/bg_btn_green_radius_22"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17" />
</LinearLayout>