<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="@dimen/dp_270"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_radius_5"
        android:minHeight="@dimen/dp_180"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16"
            tools:text="@string/app_name" />
        <TextView
            android:id="@+id/tv_title_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:textColor="#333333"
            android:textSize="@dimen/sp_16"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_des"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_15"
            android:layout_weight="1"
            android:textColor="#666666"
            tools:text="@string/app_name"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentTop="true"
            android:background="#cccccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_esc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/esc"
                android:textColor="#666666"
                android:textSize="@dimen/sp_16" />

            <View
                android:id="@+id/line"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#cccccc" />

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@color/green_16AA47"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>
</layout>